[package]
name = "protodongers"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.24.0", optional = true }
ats_common = { git = "https://github.com/odysseyarm/ats_common.git" }
bytemuck = { version = "1.22.0", features = ["derive"] }
enumn = "0.1.14"
nalgebra = { version = "0.32.3", default-features = false }
serde = { version = "1.0.219", optional = true }
opencv-ros-camera = { version = "0.14.1", default-features = false }

[features]
# default = ["std"]
std = ["nalgebra/std"]
pyo3 = ["dep:pyo3", "std"]
serde = ["dep:serde"]
