[package]
name = "protodongers"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.24.0", optional = true }
ats_common = { git = "https://github.com/odysseyarm/ats_common.git", default-features = false }
bytemuck = { version = "1.22.0", features = ["derive"] }
enumn = "0.1.14"
nalgebra = { version = "0.32.3", default-features = false, features = ["bytemuck"] }
serde = { version = "1.0.219", default-features = false, optional = true }
opencv-ros-camera = { version = "0.14.1", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
defmt = { version = "0.3.10", optional = true }

[features]
default = ["std"]
std = ["nalgebra/std", "ats_common/std"]
pyo3 = ["dep:pyo3", "std"]
serde = ["dep:serde"]
defmt = ["dep:defmt"]
